K8S/Commands-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: commandservice
  template:
    metadata: 
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice
          image: nayan112/commandservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-srv
spec:
  type: ClusterIP
  selector: 
    app: commandservice
  ports:
    - name: commandservice
      protocol: TCP
      port: 80
      targetPort: 80
